<resources>
    <string name="app_name">Apma-work1</string>
    <string name="user_email">email</string>
    <string name="user_password">password</string>
    <string name="ampa_login_logo">ampa</string>
    <string name="LoginBtnText">Login</string>
    <string name="signupLogo">Sign up to apma</string>
    <string name="Sfirstname">first name</string>
    <string name="Semail">email</string>
    <string name="Slastname">last name</string>
    <string name="Spassword">password</string>
    <string name="signup">Sign up</string>
    <string name="loginhere">already have an account? login</string>
    <string name="createAccount" />
    <string name="loadingText">Usable soon! ..</string>
    <string name="hello">Hello </string>
    <string name="user_in_name">You</string>
    <string name="searchMsg">search elements</string>
    <string name="financeImgText">Expenses</string>
    <string name="CropsImgText">Crops</string>
    <string name="AnimalImgText">Cattles</string>
    <string name="ProductImgText">Products</string>
</resources>