<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:fontFamily="@font/poppinsmedium"
        android:text="Welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"

        >

        <TextView
            android:id="@+id/textHello"
            android:fontFamily="@font/poppinsmedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/textHelloname"
            android:fontFamily="@font/poppinsmedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:text="@string/user_in_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/textHello"
            app:layout_constraintTop_toTopOf="parent"
            />
        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/ampa_login_logo"
            android:src="@drawable/ic_baseline_menu_24"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textHello"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textHello"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:color="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_regtangle_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageMenu">

            <EditText
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/searchMsg"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:importantForAutofill="no"
                android:fontFamily="@font/poppinsmedium"
                />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_search_24"
                android:contentDescription="@string/ampa_login_logo"
                app:tint="@color/colorAccent"
                
            />

        </LinearLayout>
        
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp">

-------------------------- expenses -----------------------------------------

            <LinearLayout
                android:id="@+id/layoutProducts"
                android:layout_width="171dp"
                android:layout_height="172dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_regtangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutAnimal"
                app:layout_constraintTop_toBottomOf="@id/layoutFinance"
                app:layout_constraintVertical_bias="1.0">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/ampa_login_logo"
                    android:padding="8dp"
                    android:src="@drawable/products" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center"
                    android:text="@string/ProductImgText"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutFinance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/white_regtangle_background"

                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintEnd_toStartOf="@id/layoutFinance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/ampa_login_logo"
                    android:padding="8dp"
                    android:src="@drawable/finance"/>


                <TextView
                    android:id="@+id/financeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/financeImgText"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppinsmedium"/>

            </LinearLayout>
------------------------------  crops ----------------------------------------
            <LinearLayout
                android:id="@+id/layoutCrop"
                android:layout_height="wrap_content"
                android:background="@drawable/white_regtangle_background"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintStart_toEndOf="@id/layoutProducts"
                app:layout_constraintEnd_toEndOf="@id/layoutAnimal"
                app:layout_constraintTop_toTopOf="@id/layoutFinance"
                android:layout_width="0dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/ampa_login_logo"
                    android:padding="8dp"
                    android:src="@drawable/crops"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/CropsImgText"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppinsmedium"/>

            </LinearLayout>

            --------------------------- animal ------------------------------------

            --------------------------- products ------------------------------------

            <LinearLayout
                android:id="@+id/layoutAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="200dp"

                android:layout_marginTop="20dp"
                android:background="@drawable/white_regtangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintStart_toStartOf="@id/layoutFinance"
                app:layout_constraintTop_toBottomOf="@id/layoutFinance">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/ampa_login_logo"
                    android:padding="8dp"
                    android:src="@drawable/cow" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center"
                    android:text="@string/AnimalImgText"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
